Fixing merging transitions